syntax = "proto3";

message BoolValue {
    bool value = 1;
}

message IntValue {
    int32 value = 1;
}

message StrValue {
    string value = 1;
}

message BytesValue {
    bytes value = 1;
    int32 len = 2;
}

message KeyPair {
    string public_key = 1;
    string private_key = 2;
}

message DevStatus {
    int32 index = 1;
    bool opened = 2;
    bool logged_in = 3;
    int32 pipes_count = 4;
    int32 free_pipes_count = 5;
    int32 secret_key_count = 6;
    int32 public_key_count = 7;
    int32 private_key_count = 8;
}

message CtxInfo {
    bool protect_key = 1;
    int32 device_count = 2;
    string api_version = 3;
}

message Response {
    int32 code = 1;
    string msg = 2;
    oneof data {    // "oneof" is just like "union" in C Language
        BoolValue bool_value = 4;
        IntValue int_value = 5;
        StrValue str_value = 6;
        BytesValue bytes_value = 7;
        KeyPair key_pair = 8;
        DevStatus device_status = 9;
        CtxInfo ctx_info = 10;
    }
}
